# yaml_pro_chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
experience.egg-info/: PKG-INFO  SOURCES.txt
features/: customer.yaml  total_customer_orders.yaml  total_orders_count.yaml  total_revenue.yaml
frontend/: index.html  nginx.conf  script.js  style.css
research/: test.ipynb
src/: agent.py  main.py  prompt.py  tools.py
