[project]
name = "experience"
version = "0.1.0"
description = "AI Agent"
authors = [
    { name="Matthias Elbaz",email="matthias.elbaz91@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"


[dependency-groups]
dev = [
    "fastapi>=0.115.11",
    "langchain>=0.3.21",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-cli>=0.1.77",
    "langgraph-supervisor>=0.0.10",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langmem>=0.0.24",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.60",
    "langgraph-cli[inmem]>=0.1.79",
    "pydantic>=2.11.4",
]


research = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["test"]

